Docker/kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  
  selector:
    app: mysql 
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 8080
    nodePort: 30110
